set min-width: min-content; to the control panel and split screen elements to avoid having hidden content without horizontal scroll bar in the viewport.

--- a/styles/control-panel-styles.css
+++ b/styles/control-panel-styles.css
@@ -107,7 +107,8 @@ input[type=checkbox] {
 @media (width < 1220px) {
     .control-panel {
         width: auto;
-        
+        min-width: min-content;
+
         display: grid;
         grid-template-columns: repeat(3, auto);
         grid-template-rows: repeat(3, auto);
