--- a/styles/generic-styles.css
+++ b/styles/generic-styles.css
@@ -52,6 +52,8 @@ header {
 
 @media (width < 1220px) { 
     .split-screen {
+        min-width: min-content;
+        
         flex-direction: column;
         gap: var(--spacing-100);
     }
